@@ -11,9 +11,7 @@
  *******************************************************************************/
 package org.eclipse.scanning.api.points;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.Set;
 
 /**
  * A position with no value. Can be used in a scan to expose detectors where we do not
@@ -42,7 +40,7 @@ public class StaticPosition extends AbstractPosition {
 
 	@Override
 	public List<String> getNames() {
-		return Collections.emptyList();
+		return List.of();
 	}
 
 	@Override
@@ -53,12 +51,6 @@ public class StaticPosition extends AbstractPosition {
 	@Override
 	public int getIndex(String name) {
 		return 0;
-	}
-
-	@SuppressWarnings("sync-override")
-	@Override
-	public List<Set<String>> getDimensionNames() {
-		return Collections.emptyList();
 	}
 
 	@Override
